added styling to sections: Intro, Title, ProjectCards. made them responsive using media queries. added another set of fonts to improve UI. sit is mostlty responsive in mobile an tablet, not desktop yet

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous">
-    </script>
-    <title>Navbar</title>
+        </script>
+    <title>Site</title>
 </head>
 
 <body>
@@ -19,97 +19,105 @@
     <nav class="navbar">
         <div class="content">
             <div class="logo">
-                <a href="#">O</a>
+                <a class="menu-item" href="#">OHV</a>
             </div>
             <ul class="menu-list">
                 <div class="icon cancel-btn">
                     <i class="fas fa-times"></i>
                 </div>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="menu-item" href="#Intro">Home</a></li>
+                <li><a class="menu-item" href="#About">About</a></li>
+                <li><a class="menu-item" href="#Projects">Project</a></li>
+                <li><a class="menu-item" href="#Contact">Contact</a></li>
             </ul>
             <div class="icon menu-btn">
                 <i class="fas fa-bars"></i>
-            </div> 
+            </div>
         </div>
     </nav>
     <!-- Introduction  -->
-    <section class="Intro">
-        <h1 class="Intro-name">Oscar H Viquez</h1>
-        <h3 class="Intro-Job">Front End Web Developer</h3>
+    <section class="Intro" id="Intro">
+        <h1 class="Intro-name">Oscar Hernandez Viquez</h1>
+        <h3 class="Intro-job">Front-End Web Developer</h3>
+        <!-- <h3 class="Intro-details">that specializes in HTML, CSS & SASS, JQuery, React.js and PHP, </h3> -->
+        <h3 class="Intro-details"> Based in <strong class="Intro-detail-city">Atlanta, Georgia</strong> </h3>
 
     </section>
 
     <!-- Project Title  -->
-    <h1 class="Project-Title">
-        So What have I built?!
+    <h1 class="Project-title" id="Projects">
+        Portfolio
     </h1>
 
     <!-- Project One  -->
     <section class="Card Card-1" id="Card-1">
-        <h2 class="Card-title Card-1_title">Rod's Painting and Remodeling</h2>
-        <img class='Card-image Card-2_image' src="#" alt="Rod's Painting Website">
-        <p class="Card-desctiption">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-        <li><a href="#">Link To Demo</a></li>
-        <li><a href="#">Link to Github</a></li>
+        <img class='Card-image Card-1_image' src="images/CBBScreenshot3.jpg" alt="Rod's Painting Website">
+        <div class="Card-container">
+            <h2 class="Card-title Card-1_title">Rod's Painting & Remodeling</h2>
+            <p class="Card-description Card-description_1">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </p>
+        </div>
+        <div class="Button-container">
+            <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
+            <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
+        </div>
     </section>
 
     <!-- Project Two -->
     <section class="Card Card-2" id="Card-2">
-        <h2 class="Card-title Card-1_title">Coastal Reserve</h2>
-        <img class='Card-image Card-2_image' src="#" alt="House Reservation Website">
-        <p class="Card-desctiption">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-        <li><a href="#">Link To Demo</a></li>
-        <li><a href="#">Link to Github</a></li>
+        <img class='Card-image Card-2_image' src="images/CBBScreenshot3.jpg" alt="House Reservation Website">
+        <div class="Card-container">
+            <h2 class="Card-title Card-2_title">Coastal Reserve</h2>
+            <p class="Card-description Card-description_2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </p>
+        </div>
+        <div class="Button-container">
+            <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
+            <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
+        </div>
     </section>
 
-    <!-- Project Two -->
+    <!-- Project Three -->
     <section class="Card Card-3" id="Card-3">
-        <h2 class="Card-title Card-1_title">Code Taking App</h2>
-        <img class='Card-Image Card-3_image' src="#" alt="Code Taking App">
-        <p class="Card-desctiption">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-        <li><a href="#">Link To Demo</a></li>
-        <li><a href="#">Link to Github</a></li>
+        <img class='Card-image Card-3_image' src="images/CBBScreenshot3.jpg" alt="Code Taking App">
+        <div class="Card-container">
+            <h2 class="Card-title Card-3_title">Code Taking App</h2>
+            <p class="Card-description Card-description_3">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div>
+        <div class="Button-container">
+            <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
+            <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
+        </div>
     </section>
 
-    <!-- About Me  --> 
-    <section class="About">
+    <!-- About Me  -->
+    <section class="About" id="About">
         <h1 class="About-title"> Who am I?</h1>
         <p class="About-description">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.
+            electronic typesetting, remaining essentially unchanged.
         </p>
     </section>
 
     <!-- Contact  -->
-    <section class="Contact">
+    <section class="Contact" id="Contact">
         <h1 class="Contact-title">Where to find me?</h1>
         <h3 class="Contact-hook">Connect me via any of these platform!</h3>
         <li><a href="#">Link To Insta</a></li>
