--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./dist/css/main.css">
+    <!--  SVG Icon -->
+    <head>
+        <link rel="shortcut icon" type="image/x-icon" href="svg/logo1.svg" />
+    </head>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/51a8c67162.js" crossorigin="anonymous"></script>
     <!-- JQuery -->
@@ -37,72 +41,85 @@
     </nav>
     <!-- Introduction  -->
     <section class="Intro" id="Intro">
-        <h1 class="Intro-name">Oscar Hernandez Viquez</h1>
+        <h1 class="Intro-name">Oscar Viquez</h1>
         <h3 class="Intro-job">Front-End Web Developer</h3>
         <!-- <h3 class="Intro-details">that specializes in HTML, CSS & SASS, JQuery, React.js and PHP, </h3> -->
         <h3 class="Intro-details"> Based in <strong class="Intro-detail-city">Atlanta, Georgia</strong> </h3>
-
+        <a href="#Card-1_container">
+            <i class="fas fa-chevron-down"></i>
+        </a>
     </section>
 
     <!-- Project Title  -->
-    <h1 class="Project-title" id="Projects">
+    <!-- <h1 class="Project-title" id="Projects">
         Portfolio
-    </h1>
+    </h1> -->
 
     <!-- Project One  -->
     <section class="Card Card-1" id="Card-1">
-        <img class='Card-image Card-1_image' src="images/CBBScreenshot3.jpg" alt="Rod's Painting Website">
-        <div class="Card-container">
-            <h2 class="Card-title Card-1_title">Rod's Painting & Remodeling</h2>
-            <p class="Card-description Card-description_1">
+        <!-- <img class='Card-image Card-1_image' src="images/CBBScreenshot3.jpg" alt="Rod's Painting Website"> -->
+
+        <div class="Card-container Card-1_container" id="Card-1_container">
+            <a href="#" id="Card-1_icon">
+                <img src="/svg/portfolioIcon.svg" style="width: 30%;"/>
+            </a>
+            <h2 class="Card-title Card-1_title">Rod's Painting</h2>
+            <p class="Card-description Card-1_description">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
+                industry's standard dummy text ever since the 1500s
             </p>
+
+            <div class="Button-container">
+                <li class="Card-button">
+                    <a href="#" class="Card-button-link">Link to Site</a>
+                </li>
+                <li class="Card-button">
+                    <a href="#" class="Card-button-link">Link to Github</a>
+                </li>
+            </div>
         </div>
-        <div class="Button-container">
-            <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
-            <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
-        </div>
+
     </section>
 
     <!-- Project Two -->
     <section class="Card Card-2" id="Card-2">
-        <img class='Card-image Card-2_image' src="images/CBBScreenshot3.jpg" alt="House Reservation Website">
-        <div class="Card-container">
-            <h2 class="Card-title Card-2_title">Coastal Reserve</h2>
-            <p class="Card-description Card-description_2">
+        <!-- <img class='Card-image Card-2_image' src="images/CBBScreenshot3.jpg" alt="House Reservation Website"> -->
+        <div class="Card-container Card-2_container">
+            <a href="#" id="Card-2_icon">
+                <img src="/svg/portfolioIcon.svg" style="width: 30%;"/>
+            </a>
+            <h2 class="Card-title Card-2_title">Coastal Reserve </h2>
+            <p class="Card-description Card-2_description">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
+                industry's standard dummy text ever since the 1500s
             </p>
+            <div class="Button-container">
+                <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
+                <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
+            </div>
         </div>
-        <div class="Button-container">
-            <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
-            <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
-        </div>
+
     </section>
 
     <!-- Project Three -->
     <section class="Card Card-3" id="Card-3">
-        <img class='Card-image Card-3_image' src="images/CBBScreenshot3.jpg" alt="Code Taking App">
-        <div class="Card-container">
+        <!-- <img class='Card-image Card-3_image' src="images/CBBScreenshot3.jpg" alt="Code Taking App"> -->
+        <div class="Card-container Card-3_container">
+            <a href="#" id="Card-3_icon">
+                <img src="/svg/camera.svg" style="width: 30%;"/>
+            </a>
             <h2 class="Card-title Card-3_title">Code Taking App</h2>
-            <p class="Card-description Card-description_3">
+            <p class="Card-description Card-3_description">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into
-                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of
-                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-                Aldus PageMaker including versions of Lorem Ipsum.
+                scrambled it to make a type specimen book.
             </p>
+            <div class="Button-container">
+                <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
+                <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
+            </div>
         </div>
-        <div class="Button-container">
-            <li class="Card-button"><a href="#" class="Card-button-link">Link To Demo</a></li>
-            <li class="Card-button"><a href="#" class="Card-button-link">Link to Github</a></li>
-        </div>
+
     </section>
 
     <!-- About Me  -->
