Finished Making Design For Smaller and larger mobile devices. need to make Tablet and laptop/ Desktop reponsive design. Need to fix svg issues with github pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./dist/css/main.css">
     <!--  SVG Icon -->
+
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="svg/logo1.svg" />
     </head>
@@ -31,7 +32,7 @@
                 </div>
                 <li><a class="menu-item" href="#Intro">Home</a></li>
                 <li><a class="menu-item" href="#About">About</a></li>
-                <li><a class="menu-item" href="#Projects">Project</a></li>
+                <li><a class="menu-item" href="#Card-1">Project</a></li>
                 <li><a class="menu-item" href="#Contact">Contact</a></li>
             </ul>
             <div class="icon menu-btn">
@@ -61,7 +62,7 @@
 
         <div class="Card-container Card-1_container" id="Card-1_container">
             <a href="#" id="Card-1_icon">
-                <img src="/svg/portfolioIcon.svg" style="width: 30%;"/>
+                <img src="/svg/Rod-icon.svg" style="width: 30%;" />
             </a>
             <h2 class="Card-title Card-1_title">Rod's Painting</h2>
             <p class="Card-description Card-1_description">
@@ -86,7 +87,7 @@
         <!-- <img class='Card-image Card-2_image' src="images/CBBScreenshot3.jpg" alt="House Reservation Website"> -->
         <div class="Card-container Card-2_container">
             <a href="#" id="Card-2_icon">
-                <img src="/svg/portfolioIcon.svg" style="width: 30%;"/>
+                <img src="/svg/portfolioIcon.svg" style="width: 30%;" />
             </a>
             <h2 class="Card-title Card-2_title">Coastal Reserve </h2>
             <p class="Card-description Card-2_description">
@@ -106,7 +107,7 @@
         <!-- <img class='Card-image Card-3_image' src="images/CBBScreenshot3.jpg" alt="Code Taking App"> -->
         <div class="Card-container Card-3_container">
             <a href="#" id="Card-3_icon">
-                <img src="/svg/camera.svg" style="width: 30%;"/>
+                <img src="/svg/camera.svg" style="width: 30%;" />
             </a>
             <h2 class="Card-title Card-3_title">Code Taking App</h2>
             <p class="Card-description Card-3_description">
@@ -136,11 +137,29 @@
     <!-- Contact  -->
     <section class="Contact" id="Contact">
         <h1 class="Contact-title">Where to find me?</h1>
-        <h3 class="Contact-hook">Connect me via any of these platform!</h3>
-        <li><a href="#">Link To Insta</a></li>
-        <li><a href="#">Link to Linkden</a></li>
-        <li><a href="#">Link To Somewhere</a></li>
-        <li><a href="#">Link to Github</a></li>
+        <h3 class="Contact-description">Connect me via any of these platform!</h3>
+        <div class="Contact-list_div">
+            <li class="Contact-list">
+                <a href="#" class="Contact-icons">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li class="Contact-list">
+                <a href="#" class="Contact-icons">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+            <li class="Contact-list">
+                <a href="#" class="Contact-icons">
+                    <i class="fab fa-github-square"></i>
+                </a>
+            </li>
+            <li class="Contact-list">
+                <a href="#" class="Contact-icons">
+                    <i class="fab fa-codepen"></i>
+                </a>
+            </li>
+        </div>
     </section>
 
     <!-- Javascript  -->
