--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         </div>
         <!-- header__bar end -->
 
+      <!-- ====================================== Navigation ======================================  -->
 
         <!-- nav start -->
         <nav class="nav js-nav">
@@ -345,7 +346,7 @@
 
             <div class="col-xl-5 offset-xl-1 col-lg-6 offset-lg-1 z-1">
               <div data-parallax="0.7" class="masthead__img overflow-hidden h-100vh ml-minus-sm md:ml-0">
-                <div data-parallax-target class="bg-image js-lazy js-image" data-bg="img/home-img/home-bg-4.jpg"></div>
+                <div data-parallax-target class="bg-image js-lazy js-image" data-bg="img/img-home/home-bg-2.jpg"></div>
                 <div class="masthead__img__cover js-image-cover"></div>
               </div>
             </div>
@@ -379,7 +380,7 @@
             <div class="col-lg-6 z-1">
               <div data-anim-child="img-right cover-dark-2 delay-2">
                 <div class="ratio ratio-3:4" data-parallax="0.7">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/about-img/about-img-3.jpg"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-about/about-img-3.jpg"></div>
                 </div>
               </div>
             </div>
@@ -426,15 +427,15 @@
             <div class="col-lg-6">
               <div class="sectionHeading -md">
                 <p class="sectionHeading__subtitle -light">Portfolio</p>
-                <h2 class="sectionHeading__title text-white">Selected Works</h2>
+                <h2 class="sectionHeading__title text-white">Featured Projects</h2>
               </div>
             </div>
 
-            <div class="col-auto md:mt-24">
+            <!-- <div class="col-auto md:mt-24">
               <button class="button -md -white text-black">
                 View All
               </button>
-            </div>
+            </div> -->
           </div>
           <!-- row end -->
         </div>
@@ -450,18 +451,18 @@
                 <div data-anim="slide-up delay-1" class="portfolioCard -type-2 -hover">
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
-                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/projects/vertical/1.jpg">
+                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/img-projects/project-3.png">
                       </div>
                     </div>
                   </div>
 
                   <div class="portfolioCard__content">
                     <a href="#" class="portfolioCard__category text-light">
-                      Web Design
+                      HTML Email
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Slumber
+                      Promotional Email
                     </h3>
                   </div>
 
@@ -473,18 +474,18 @@
                 <div data-anim="slide-up delay-2" class="portfolioCard -type-2 -hover">
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
-                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/projects/vertical/2.jpg">
+                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/img-projects/email-newsletter.png">
                       </div>
                     </div>
                   </div>
 
                   <div class="portfolioCard__content">
                     <a href="#" class="portfolioCard__category text-light">
-                      Branding
+                      HTML Email
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Apple Tonik
+                      Newsletter
                     </h3>
                   </div>
 
@@ -496,18 +497,18 @@
                 <div data-anim="slide-up delay-3" class="portfolioCard -type-2 -hover">
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
-                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/projects/vertical/3.jpg">
+                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/img-projects/project-1.png">
                       </div>
                     </div>
                   </div>
 
                   <div class="portfolioCard__content">
                     <a href="#" class="portfolioCard__category text-light">
-                      Development
+                      Landing Page
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Black Sneakers
+                      Digital Agency
                     </h3>
                   </div>
 
@@ -519,18 +520,18 @@
                 <div data-anim="slide-up delay-4" class="portfolioCard -type-2 -hover">
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
-                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/projects/vertical/4.jpg">
+                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/img-projects/project-2.png">
                       </div>
                     </div>
                   </div>
 
                   <div class="portfolioCard__content">
                     <a href="#" class="portfolioCard__category text-light">
-                      Branding
+                      Landing Page
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Steel Bottle
+                      Resturaunt
                     </h3>
                   </div>
 
@@ -542,18 +543,18 @@
                 <div data-anim="slide-up delay-5" class="portfolioCard -type-2 -hover">
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
-                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/projects/vertical/5.jpg">
+                      <div class="ratio ratio-2:3 bg-image swiper-lazy" data-background="img/img-projects/project-2.png">
                       </div>
                     </div>
                   </div>
 
                   <div class="portfolioCard__content">
                     <a href="#" class="portfolioCard__category text-light">
-                      Web Design
+                      HTML Email
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Whisper Pink
+                      Lead Nuturing Email
                     </h3>
                   </div>
 
@@ -572,11 +573,11 @@
 
                   <div class="portfolioCard__content">
                     <a href="#" class="portfolioCard__category text-light">
-                      Development
+                      HTML Email
                     </a>
 
                     <h3 class="portfolioCard__title fw-500 text-2xl mt-4 text-white">
-                      Summer Time
+                      Milestone Email
                     </h3>
                   </div>
 
