fixed footer issue

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <div class="navList__wrap">
                     <ul class="navList js-navList">
 
-                      <li >
+                      <li>
                         <a href="#about-me">About</a>
                       </li>
 
@@ -576,7 +576,7 @@
                       <p class="serviceCard__text text-light mt-12">
                         Consider the vast of science and the doctrine of evolution. Every years beast.
                       </p>
-                      <!-- <div class="mt-16">
+                     <div class="mt-16">
                         <a data-barba href="#" class="button -icon text-white">
                           Know More
                           <i class="icon size-xs str-width-md" data-feather="arrow-right"></i>
@@ -584,7 +584,7 @@
                       </div> -->
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
         <!-- row end -->
@@ -596,93 +596,6 @@
   <!-- container end -->
   </section>
   <!-- section end -->
-
-
-  <!-- ====================================== Footer ======================================  -->
-
-  <!-- footer start -->
-  <footer class="footer -type-1 bg-dark-1">
-    <!-- container start -->
-    <div class="container">
-
-      <div class="footer__top">
-        <!-- row start -->
-        <div class="row y-gap-48 justify-content-between">
-          <div class="col-lg-auto col-sm-12">
-            <a href="#" class="footer__logo text-white">
-              Oscar Hernandez-Viquez
-            </a>
-          </div>
-
-          <!-- <div class="col-lg-3 col-sm-6">
-                <h4 class="text-xl fw-500 text-white">
-                  Studio
-                </h4> -->
-
-          <!-- <div class="footer__content text-base text-light mt-16 sm:mt-12">
-                  <p>Studio Stukram 1910 Gateway Road, Portland, Oregon 97230</p>
-                  <p class="mt-8">hello@stukram.com</p>
-                  <p class="mt-8">+1 202 555 0171</p>
-                </div>
-              </div> -->
-
-          <!-- <div class="col-lg-auto col-sm-4">
-                <h4 class="text-xl fw-500 text-white">
-                  Links
-                </h4>
-
-                <div class="footer__content text-base text-light mt-16 sm:mt-12">
-                  <div><a data-barba href="blog-1.html" class="button -underline">Blog</a></div>
-                  <div><a data-barba href="about-1.html" class="button -underline mt-4">Abous Us</a></div>
-                  <div><a data-barba href="#" class="button -underline mt-4">Shop</a></div>
-                  <div><a data-barba href="contact-1.html" class="button -underline mt-4">Contacts</a></div>
-                </div>
-              </div> -->
-
-          <div class="col-lg-auto col-auto">
-            <h4 class="text-xl fw-500 text-white">
-              Follow Me
-            </h4>
-
-            <div class="social -bordered mt-16 sm:mt-12">
-              <a class="social__item text-white border-light" href="#">
-                <i class="fa fa-twitter"></i>
-              </a>
-              <a class="social__item text-white border-light" href="#">
-                <i class="fa fa-instagram"></i>
-              </a>
-              <a class="social__item text-white border-light" href="#">
-                <i class="fa fa-youtube-play"></i>
-              </a>
-              <a class="social__item text-white border-light" href="#">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- row end -->
-      </div>
-
-
-      <div class="footer__bottom -light">
-        <!-- row start -->
-        <div class="row">
-          <div class="col">
-            <div class="footer__copyright">
-              <p class="text-light">
-                @ 2020, Stukram. Made with passion by Krellion.
-              </p>
-            </div>
-          </div>
-        </div>
-        <!-- row end -->
-      </div>
-
-    </div>
-    <!-- container end -->
-  </footer>
-  <!-- footer end -->
-
 
   </main>
 
