replaced placeholder image and txt

--- a/index.html
+++ b/index.html
@@ -18,25 +18,8 @@
   <link rel="stylesheet" href="css/main.css">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-  <link rel="manifest" href="img/favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
 
-  <title>Stukram</title>
+  <title>Oscar Viquez Portfolio</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -196,7 +179,7 @@
                 </div>
 
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="#" class="button -md -white text-black js-button">
+                  <a href="#about-me" class="button -md -white text-black js-button">
                     About Me
                   </a>
                 </div>
@@ -437,20 +420,20 @@
                 </div>
                 <div data-anim-child="slide-up delay-10">
                   <h2 class="sectionHeading__title text-white mt-40 md:mt-24">
-                    Branding & Positioning
+                    HTML Email - Web Developer who likes to problem solve and find efficient, yet high quality solutions.
                   </h2>
                 </div>
                 <div data-anim-child="slide-up delay-11">
                   <p class="text-light mt-32 md:mt-20">
-                    Very seasons gathering be dry stars every fifth likeness he form saying behold had be had is fruit
-                    herb called made god so darkness behold subdue lights. May together spirit that. Likeness creepeth
-                    one signs seasons.
+                   
+                    I like to focus learning on improving my skills. Using the knowledge I obtain to provide
+                    higher quality products and service. Verifying that users or clients are also satisfied with the results.
                   </p>
                 </div>
                 <div data-anim-child="slide-up delay-12">
-                  <a href="#" class="button -md -outline-white text-white mt-48 md:mt-32">
+                  <!-- <a href="#" class="button -md -outline-white text-white mt-48 md:mt-32">
                     About Us
-                  </a>
+                  </a> -->
                 </div>
               </div>
             </div>
