--- a/project-1.html
+++ b/project-1.html
@@ -68,7 +68,7 @@
         <!-- header__bar start -->
         <div class="header__bar">
           <div class="header__logo js-header-logo">
-            <a data-barba href="home-1.html">
+            <a data-barba href="index.html">
               <img class="header__logo__light js-lazy"
                 data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x"
                 data-src="img/logo/logo-light.png" alt="Logo">
@@ -183,7 +183,7 @@
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/backgrounds/2.jpg"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-3.png"></div>
                 </div>
               </div>
             </div>
