--- a/project-2.html
+++ b/project-2.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/main.css">
 
   
-  <title>Promotional Email</title>
+  <title>Newsletter</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
