--- a/project-3.html
+++ b/project-3.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/main.css">
 
   
-  <title>Promotional Email</title>
+  <title>Digital Agency</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -186,7 +186,7 @@
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/backgrounds/2.jpg"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-1.png"></div>
                 </div>
               </div>
             </div>
