--- a/project-4.html
+++ b/project-4.html
@@ -19,7 +19,7 @@
 
   
 
-  <title>Promotional Email</title>
+  <title>Resturaunt</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -175,7 +175,7 @@
                   Fourth under.
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="https://unruffled-spence-264433.netlify.app/" class="button -md -black text-white js-button">
+                  <a href="https://nifty-pare-9dc3c8.netlify.app/" class="button -md -black text-white js-button">
                     View Website
                   </a>
                 </div>
@@ -185,7 +185,7 @@
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/backgrounds/2.jpg"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-2.png"></div>
                 </div>
               </div>
             </div>
