added image to newsletter section

--- a/project-2.html
+++ b/project-2.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
 
-  
+
   <title>Newsletter</title>
 </head>
 
@@ -177,8 +177,8 @@
                   Fourth under.
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="https://unruffled-spence-264433.netlify.app/" class="button -md -black text-white js-button">
-                    View Website
+                  <a href="#" class="button -md -black text-white js-button">
+                    Scroll down to see full email
                   </a>
                 </div>
               </div>
@@ -187,13 +187,15 @@
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/backgrounds/2.jpg"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-4-test.jpg">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <!-- row end -->
         </div>
+
         <!-- container end -->
       </section>
       <!-- page header end -->
