changed images across pages. Replacing Place holder text. Added a new page to host email. hopefully it works.

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                         </ul>
                       </li>
 
-                      <li class="menu-item-has-children">
+                      <!-- <li class="menu-item-has-children">
                         <a href="#services">Services</a>
 
-                      </li>
+                      </li> -->
 
                     </ul>
                   </div>
@@ -266,7 +266,7 @@
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
                       <div class="ratio ratio-2:3 bg-image swiper-lazy"
-                        data-background="img/img-projects/email-newsletter.png">
+                        data-background="img/img-projects/project-4-full-2.png">
                       </div>
                     </div>
                   </div>
@@ -333,7 +333,7 @@
                 </div>
               </div>
 
-              <div class="swiper-slide slider-slide">
+              <!-- <div class="swiper-slide slider-slide">
                 <div data-anim="slide-up delay-5" class="portfolioCard -type-2 -hover">
                   <div class="portfolioCard__img">
                     <div class="portfolioCard__img__inner">
@@ -355,7 +355,7 @@
 
                   <a class="portfolioCard__link" href="project-5.html"></a>
                 </div>
-              </div>
+              </div> -->
 
               <!-- <div class="swiper-slide slider-slide">
                 <div data-anim="slide-up delay-6" class="portfolioCard -type-2 -hover">
