--- a/project-1.html
+++ b/project-1.html
@@ -13,13 +13,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
+  <!-- ================= Font Awesome  =================-->
+  <script src="https://kit.fontawesome.com/51a8c67162.js" crossorigin="anonymous"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
 
 
-
-  <title>Promotional Email</title>
+  <title>Newsletter</title>
 </head>
 
 <body class="preloader-visible" data-barba="wrapper">
@@ -75,7 +77,8 @@
             </a>
             <a data-barba href="index.html">
               <p class="header__logo__light js-lazy"
-                data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" alt="Logo"> O.H.V</p>
+                data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" alt="Logo"> <i
+                  class="fas fa-home"></i> Home Page</p>
             </a>
           </div>
 
@@ -108,11 +111,6 @@
                 <div class="nav__content__left">
                   <div class="navList__wrap">
                     <ul class="navList js-navList">
-                      <li>
-                        <a data-barba href="index.html">
-                          Home
-                        </a>
-                      </li>
 
                       <li class="menu-item-has-children">
                         <a>Portfolio</a>
@@ -160,36 +158,42 @@
             <div class="col-lg-5 col-md-8">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
-                  Simply said I design & code.
+                  Houser Newsletter
                 </h1>
               </div>
 
               <div data-anim-child="slide-up delay-1">
                 <p class="text-lg text-black fw-500 mt-32">
-                  So seas saw sixth open give without. In brought. Their. Saying stars. Multiply bearing. Can't him
-                  after isn't. Divide multiply fruit bearing life.
+                  A newsletter for a blog site that shares advice on real-estate and home buying!
                 </p>
               </div>
 
               <div data-anim-child="slide-up delay-2">
                 <p class="text-lg leading-5xl mt-24">
-                  Void winged dry made shall heaven deep. You're it whales herb yielding rule bring Very had above seed
-                  every. Fish you're so midst yielding two open brought blessed. Fourth void was deep sixth have meat.
-                  Fourth under.
+                  This project was made using HTML & CSS. I used Litmus | Puts Mail to test responsiveness and quality
+                  of e-mail. Images were uploaded to post image site. I have also created another version of this email
+                  using the Foundation Framework
                 </p>
+                <div class="masthead__button overflow-hidden mt-48 md:mt-32">
+                  <a href="/email-2.html" class="button -md -black text-white js-button">
+                    View Email
+                  </a>
+                </div>
               </div>
             </div>
 
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-3.png"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-4-full-2.png">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <!-- row end -->
         </div>
+
         <!-- container end -->
       </section>
       <!-- page header end -->
