--- a/project-4.html
+++ b/project-4.html
@@ -13,11 +13,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
+  <!-- ================= Font Awesome  =================-->
+  <script src="https://kit.fontawesome.com/51a8c67162.js" crossorigin="anonymous"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
 
-  
+
 
   <title>Resturaunt</title>
 </head>
@@ -75,7 +78,8 @@
             </a>
             <a data-barba href="index.html">
               <p class="header__logo__light js-lazy"
-                data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" alt="Logo"> O.H.V</p>
+                data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" alt="Logo"> <i
+                  class="fas fa-home"></i> Home Page</p>
             </a>
           </div>
 
@@ -108,11 +112,6 @@
                 <div class="nav__content__left">
                   <div class="navList__wrap">
                     <ul class="navList js-navList">
-                      <li>
-                        <a data-barba href="index.html">
-                          Home
-                        </a>
-                      </li>
 
                       <li class="menu-item-has-children">
                         <a>Portfolio</a>
@@ -136,6 +135,8 @@
                         </ul>
                       </li>
 
+
+
                     </ul>
                   </div>
                 </div>
@@ -148,8 +149,8 @@
       </header>
       <!-- header end -->
 
-       <!-- page header start -->
-       <section class="d-flex align-items-center md:d-block h-100vh md:h-unset">
+      <!-- page header start -->
+      <section class="d-flex align-items-center md:d-block h-100vh md:h-unset">
         <!-- container start -->
         <div data-anim-wrap class="container">
           <!-- row start -->
