--- a/project-3.html
+++ b/project-3.html
@@ -13,11 +13,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
+  <!-- ================= Font Awesome  =================-->
+  <script src="https://kit.fontawesome.com/51a8c67162.js" crossorigin="anonymous"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
 
-  
+
   <title>Digital Agency</title>
 </head>
 
@@ -74,7 +77,8 @@
             </a>
             <a data-barba href="index.html">
               <p class="header__logo__light js-lazy"
-                data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" alt="Logo"> O.H.V</p>
+                data-srcset="img/logo/logo-light.png 1x, img/logo/logo-light-x2.png 2x" alt="Logo"> <i
+                  class="fas fa-home"></i> Home Page</p>
             </a>
           </div>
 
@@ -107,11 +111,6 @@
                 <div class="nav__content__left">
                   <div class="navList__wrap">
                     <ul class="navList js-navList">
-                      <li>
-                        <a data-barba href="index.html">
-                          Home
-                        </a>
-                      </li>
 
                       <li class="menu-item-has-children">
                         <a>Portfolio</a>
@@ -135,8 +134,6 @@
                         </ul>
                       </li>
 
-
-
                     </ul>
                   </div>
                 </div>
@@ -158,26 +155,29 @@
             <div class="col-lg-5 col-md-8">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
-                  Simply said I design & code.
+                  Digital Agency Landing Page
                 </h1>
               </div>
 
-              <div data-anim-child="slide-up delay-1">
+              <!-- <div data-anim-child="slide-up delay-1">
                 <p class="text-lg text-black fw-500 mt-32">
-                  So seas saw sixth open give without. In brought. Their. Saying stars. Multiply bearing. Can't him
-                  after isn't. Divide multiply fruit bearing life.
+                
                 </p>
-              </div>
+              </div> -->
 
               <div data-anim-child="slide-up delay-2">
                 <p class="text-lg leading-5xl mt-24">
-                  Void winged dry made shall heaven deep. You're it whales herb yielding rule bring Very had above seed
-                  every. Fish you're so midst yielding two open brought blessed. Fourth void was deep sixth have meat.
-                  Fourth under.
+                  I used a mockup from dribble.com to get the design for this Landing Page. I used HTML and SCSS to
+                  create this page. Certain website I used to obtain icons was Font Awesome. GSAP was used to create all
+                  of the animations.
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
                   <a href="https://unruffled-spence-264433.netlify.app/" class="button -md -black text-white js-button">
                     View Website
+                  </a>
+                  <a href="https://dribbble.com/shots/15552090-Digital-Marketing-Agency"
+                    class="button -md -black text-white js-button">
+                    Ui Mock-up video
                   </a>
                 </div>
               </div>
