finsihed adding text to all projects page. all projects are either hosted or on html file.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
+  <!-- ================= Font Awesome  =================-->
+  <script src="https://kit.fontawesome.com/51a8c67162.js" crossorigin="anonymous"></script>
+
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/vendors.css">
   <link rel="stylesheet" href="css/main.css">
@@ -106,7 +110,7 @@
                   <div class="navList__wrap">
                     <ul class="navList js-navList">
 
-                    
+
                       <li class="menu-item-has-children">
                         <a>Portfolio</a>
 
@@ -197,10 +201,10 @@
         <!-- ui-element start -->
         <div class="ui-element -left js-ui md:d-none">
           <div class="ui-element__social -column text-white js-bottom-left-links">
-            <a href="#"><i class="fa fa-behance"></i></a>
-            <a href="#"><i class="fa fa-dribbble"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
+            <!-- <a href="#"><i class="fa fa-behance"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-instagram"></i></a> -->
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
           </div>
         </div>
         <!-- ui-element end -->
@@ -417,14 +421,16 @@
                 </div>
                 <div data-anim-child="slide-up delay-10">
                   <h2 class="sectionHeading__title text-white mt-40 md:mt-24">
-                    HTML Email - Web Developer who likes to problem solve and find efficient, yet high quality solutions.
+                    HTML Email - Web Developer who likes to problem solve and find efficient, yet high quality
+                    solutions.
                   </h2>
                 </div>
                 <div data-anim-child="slide-up delay-11">
                   <p class="text-light mt-32 md:mt-20">
-                   
+
                     I like to focus learning on improving my skills. Using the knowledge I obtain to provide
-                    higher quality products and service. Verifying that users or clients are also satisfied with the results.
+                    higher quality products and service. Verifying that users or clients are also satisfied with the
+                    results.
                   </p>
                 </div>
                 <div data-anim-child="slide-up delay-12">
@@ -482,7 +488,7 @@
                         Web Technologies
                       </h3>
                       <p class="serviceCard__text text-light mt-12">
-                        HTML, CSS/SCSS, JavaScript, Bootstrap, NPM / Node.js
+                        HTML, CSS/SCSS, JavaScript, Jquery, Bootstrap, NPM / Node.js
                       </p>
                       <!-- <div class="mt-16">
                         <a data-barba href="#" class="button -icon text-white">
