--- a/project-1.html
+++ b/project-1.html
@@ -158,13 +158,13 @@
             <div class="col-lg-5 col-md-8">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
-                  Houser Newsletter
+                  Promotional Email
                 </h1>
               </div>
 
               <div data-anim-child="slide-up delay-1">
                 <p class="text-lg text-black fw-500 mt-32">
-                  A newsletter for a blog site that shares advice on real-estate and home buying!
+                  An email that promotes sales and deals on clothes for an online store / app!
                 </p>
               </div>
 
@@ -175,8 +175,12 @@
                   using the Foundation Framework
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="/email-2.html" class="button -md -black text-white js-button">
+                  <a href="/email-1.html" class="button -md -black text-white js-button">
                     View Email
+                  </a>
+                  <a href="https://dribbble.com/shots/15620369-Polybox-Email-HTML-templates"
+                    class="button -md -black text-white js-button">
+                    View Mock-up
                   </a>
                 </div>
               </div>
@@ -185,7 +189,7 @@
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-4-full-2.png">
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-3.png">
                   </div>
                 </div>
               </div>
