--- a/project-4.html
+++ b/project-4.html
@@ -158,26 +158,28 @@
             <div class="col-lg-5 col-md-8">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
-                  Simply said I design & code.
+                  Resturaunt Landing Page
                 </h1>
               </div>
 
-              <div data-anim-child="slide-up delay-1">
+              <!-- <div data-anim-child="slide-up delay-1">
                 <p class="text-lg text-black fw-500 mt-32">
-                  So seas saw sixth open give without. In brought. Their. Saying stars. Multiply bearing. Can't him
-                  after isn't. Divide multiply fruit bearing life.
+                
                 </p>
-              </div>
+              </div> -->
 
               <div data-anim-child="slide-up delay-2">
                 <p class="text-lg leading-5xl mt-24">
-                  Void winged dry made shall heaven deep. You're it whales herb yielding rule bring Very had above seed
-                  every. Fish you're so midst yielding two open brought blessed. Fourth void was deep sixth have meat.
-                  Fourth under.
+                  I used a mockup from dribble.com to get the design for this Landing Page. I used HTML and SCSS to
+                  create this page. Certain website I used to obtain icons was Font Awesome. Jquery was used for navigation bar
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="https://nifty-pare-9dc3c8.netlify.app/" class="button -md -black text-white js-button">
+                  <a href="https://unruffled-spence-264433.netlify.app/" class="button -md -black text-white js-button">
                     View Website
+                  </a>
+                  <a href="https://dribbble.com/shots/15552090-Digital-Marketing-Agency"
+                    class="button -md -black text-white js-button">
+                    Ui Mock-up video
                   </a>
                 </div>
               </div>
