edit links and words for project pages

--- a/project-3.html
+++ b/project-3.html
@@ -177,7 +177,7 @@
                   </a>
                   <a href="https://dribbble.com/shots/15552090-Digital-Marketing-Agency"
                     class="button -md -black text-white js-button">
-                    Ui Mock-up video
+                    PSD Mockup
                   </a>
                 </div>
               </div>
