--- a/project-4.html
+++ b/project-4.html
@@ -174,12 +174,12 @@
                   create this page. Certain website I used to obtain icons was Font Awesome. Jquery was used for navigation bar
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
-                  <a href="https://unruffled-spence-264433.netlify.app/" class="button -md -black text-white js-button">
+                  <a href="https://nifty-pare-9dc3c8.netlify.app/" class="button -md -black text-white js-button">
                     View Website
                   </a>
-                  <a href="https://dribbble.com/shots/15552090-Digital-Marketing-Agency"
+                  <a href="https://themeforest.net/item/cafena-coffee-shop-psd-template/screenshots/32629948?index=3"
                     class="button -md -black text-white js-button">
-                    Ui Mock-up video
+                    PSD Mock-up
                   </a>
                 </div>
               </div>
