--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   </div>
 
                   <div class="portfolioCard__content">
-                    <a href="#" class="portfolioCard__category text-light">
+                    <a href="project-1.html" class="portfolioCard__category text-light">
                       HTML Email
                     </a>
 
@@ -276,7 +276,7 @@
                   </div>
 
                   <div class="portfolioCard__content">
-                    <a href="#" class="portfolioCard__category text-light">
+                    <a href="project-2.html" class="portfolioCard__category text-light">
                       HTML Email
                     </a>
 
@@ -300,7 +300,7 @@
                   </div>
 
                   <div class="portfolioCard__content">
-                    <a href="#" class="portfolioCard__category text-light">
+                    <a href="project-3.html" class="portfolioCard__category text-light">
                       Landing Page
                     </a>
 
@@ -324,7 +324,7 @@
                   </div>
 
                   <div class="portfolioCard__content">
-                    <a href="#" class="portfolioCard__category text-light">
+                    <a href="project-4.html" class="portfolioCard__category text-light">
                       Landing Page
                     </a>
 
