changed photos for project 4 aka coffeeshop

--- a/project-4.html
+++ b/project-4.html
@@ -158,7 +158,7 @@
             <div class="col-lg-5 col-md-8">
               <div data-anim-child="slide-up" class="sectionHeading -md">
                 <h1 class="sectionHeading__title">
-                  Resturaunt Landing Page
+                  Coffee Shop Landing Page
                 </h1>
               </div>
 
@@ -170,8 +170,10 @@
 
               <div data-anim-child="slide-up delay-2">
                 <p class="text-lg leading-5xl mt-24">
-                  I used a mockup from dribble.com to get the design for this Landing Page. I used HTML and SCSS to
-                  create this page. Certain website I used to obtain icons was Font Awesome. Jquery was used for navigation bar
+                  I used a psd mockup from Themeforest.net to create this Coffee Shop Landing Page. I used HTML and SCSS
+                  to
+                  create this page. Certain website I used to obtain icons was Font Awesome. Jquery was used for
+                  navigation bar. Photoshop was used to manipulate and crop images.
                 </p>
                 <div class="masthead__button overflow-hidden mt-48 md:mt-32">
                   <a href="https://nifty-pare-9dc3c8.netlify.app/" class="button -md -black text-white js-button">
@@ -188,7 +190,7 @@
             <div class="col-lg-6 offset-lg-1 md:mt-56">
               <div data-anim-child="img-right cover-white delay-6">
                 <div data-parallax="0.7" class="h-100vh md:h-70vh">
-                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/project-2.png"></div>
+                  <div data-parallax-target class="bg-image js-lazy" data-bg="img/img-projects/coffeeshopSC.png"></div>
                 </div>
               </div>
             </div>
